# ai-essay-scorer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
ai_essay_scorer/: baseline_model.py  commands.py  data.py  download_data.py  module.py  train.py
conf/: train.yaml
conf/datamodule/: baseline_datamodule.yaml
conf/logger/: mlflow_logger.yaml
conf/pl_module/: baseline_module.yaml  roberta_module.yaml
data/: raw_data.csv.dvc
