[project]
name = "ai-essay-scorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Sysoev",email = "sergey.sys@mail.ru"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc (>=3.65.0,<4.0.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
]

[tool.setuptools.packages.find]
where = ["ai_essay_scorer"]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
